--- a/1st_homework/about.html
+++ b/1st_homework/about.html
@@ -15,29 +15,25 @@
         <div class="nav-bar">
             <div class="logo-background"></div>
             <div class="logo">
-                <h1>ryuWisdom</h1>
+                <a href=""><h1>ryuWisdom</h1></a>
             </div>
 
             <div class="menu">
                 <div class="list-background"></div>
                 <div class="list">
-                    <li><a href="">About Me</a></li>
-                    <!-- <li><a href="">Experience</a></li> -->
-                    <li><a href="">Gallary</a></li>
-                    <li><a href="">Plan</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="d-day.html">The day</a></li>
                 </div>
 
             </div>
-
-
-
-
 
 
         </div>
 
         <div class="main-container">
             <div class="profile">
+                <h1 class="about-subject">About Me</h1>
                 <div class="profile-img">
                     <img src="./images/profile_edit.jpg" alt="profile-img">
                     <div class="background"></div>
@@ -45,7 +41,7 @@
 
                 <div class="profile-info">
                     <div class="intro-text">
-                        <p>안녕하세요🧡<br> 코딩을 배우며 하루하루가 행복한 예비 프론트앤드 개발자 류지혜입니다🥰.<br></p>
+                        <p>안녕하세요🧡<br>코딩공부로 하루하루가 고단하면서도 행복한 예비 프론트앤드 개발자 류지혜입니다🥰.<br></p>
                         <!-- <p class="logo-text">ryuWisdom은 제가 향후 브랜딩 할 </p> -->
                     </div>
                 </div>
@@ -54,88 +50,107 @@
                         <p>Likes & Dislikes </p>
                     </a>
                     <a href="">
-                        <p>interests</p>
+                        <p>Interests</p>
                     </a>
                     <a href="">
-                        <p>you and I</p>
+                        <p>You and I</p>
                     </a>
                 </div>
                 <div class="sub-info-contents">
 
-                    <div class="like">
+                    <div class="like" id="like">
                         <p>Likes 🤗 & Dislikes 😑</p>
-                        <!-- <img src="./images/likes.png" alt=""> -->
 
                         <div class="likes-container">
                             <div class="likes-contents">
-                                <div class=item>
+                                <div class="item hvr-bounce-in">
                                     <p>Cat</p>
                                 </div>
-                                <div class=item>
-                                    <p>Working Out</p>
+                                <div class="item hvr-bounce-in">
+                                    <p>almost every Working Out</p>
                                 </div>
-                                <div class=item>
+                                <div class="item  hvr-bounce-in">
                                     <p>Wine & Beer</p>
                                 </div>
-                                <div class=item>
+                                <div class="item  hvr-bounce-in">
                                     <p>Spicy Food & 떡볶이</p>
                                 </div>
-                                <div class=item>
+                                <div class="item  hvr-bounce-in">
                                     <p>Miffy</p>
                                 </div>
-                                <div class=item>
+                                <div class="item  hvr-bounce-in">
                                     <p>Vegetable & fruit</p>
                                 </div>
-                                <div class=item>
+                                <div class="item  hvr-bounce-in">
                                     <p>Travel</p>
                                 </div>
-                                <div class=item>
+                                <div class="item  hvr-bounce-in">
                                     <p>Nature</p>
                                 </div>
-                                <div class=item>
+                                <div class="item  hvr-bounce-in">
                                     <p>Cozy space</p>
                                 </div>
                             </div>
                             <div class="dislikes-contents">
-                                <div class="item">
+                                <div class="item hvr-bounce-out">
                                     <p>Winter</p>
                                 </div>
-                                <div class="item">
+                                <div class="item hvr-bounce-out">
                                     <p>Rainy Day</p>
                                 </div>
-                                <div class="item">
+                                <div class="item hvr-bounce-out">
                                     <p>vegetable with strong smell</p>
                                 </div>
-                                <div class="item">
+                                <div class="item hvr-bounce-out">
                                     <p>Red Meat</p>
                                 </div>
-                                <div class="item">
+                                <div class="item hvr-bounce-out">
                                     <p>Vodka</p>
                                 </div>
-                                <div class="item">
+                                <div class="item hvr-bounce-out">
                                     <p>Noisy when taking a nap</p>
                                 </div>
-                                <div class="item">
-                                    <p>Manual</p>
+                                <div class="item hvr-bounce-out">
+                                    <p>Reading a Manual</p>
                                 </div>
-                                <div class="item">
-                                    <p></p>
+                                <div class="item hvr-bounce-out">
+                                    <p>Machine</p>
                                 </div>
-                                <div class="item">
-                                    <p></p>
+                                <div class="item hvr-bounce-out">
+                                    <p>Getting late to somewhere</p>
                                 </div>
                             </div>
                         </div>
 
 
                     </div>
-                    <div class="interest">
+                    <div class="interest" id="interest">
                         <p>Interests👀<p>
+                            <div class="interest-content">
+                                <p>저는 환경(Environment)과 잘 사는 것(Well-Being)에 관심이 많습니다.</p>
+                                <p>언젠가 환경(Environment)과 잘 사는 것(Well-Being), 두가지 컨셉과 관련된 사업모델로</p>
+                                <p>미약하더라도 사회에 건강한 영향을 주는 작은 비즈니스를 시작하고 싶습니다.</p>
+
+
+
+                            </div>
                     </div>
-                    <div class="chracter">
+                    <div class="chracter" id="chracter">
                         <p>You And I with MBTI👯‍♀</p>
-                        <div class="btn">
-                            Click Me!
+                        <div class="chracter-info">
+                            <div class="mytype">
+
+                                <p>저의 mbti 성격유형은 '토론자'로 알려진 ENTP입니다🙋‍♀️.</p>
+                                <p>세상 모든 것에 호기심이 많고 대표키워드 '토론자'처럼 사람들과 의견을 공유하는 것을 좋아합니다.</p>
+                                <p>안정보다는 새롭고 신선한 경험을 추구하며 걱정을 잘 하지 않습니다.</p>
+                            </div>
+                            <div class="matching-test">
+                                <p><b>재미</b>로 해보는<br>
+                                지혜와 나의 MBTI 성격 매칭 테스트 🎶</p>
+                                <div class="btn">Click Me!</div>
+
+                            </div>
+                        
                         </div>
                         <!-- modal -->
                         <div class="modal-bg">
@@ -166,7 +181,7 @@
                                     <option value="ENTJ">ENTJ</option>
                                 </select>
                                 <div class="modal-check">확인</div>
-                                <span class="modal-close">X</span>
+                                <span class="modal-close"><i class="fas fa-times"></i></span>
                             </div>
 
                         </div>
@@ -176,32 +191,32 @@
                         <div class="modal-best">
                             <div class="modal-best-content">
                                 <div></div>
-                                <p>💛🧡💛🧡</p>
-                                <span class="modal-close">X</span>
+                                <!-- <p>💛🧡💛🧡</p> -->
+                                <span class="modal-close"><i class="fas fa-times"></i></span>
                             </div>
                         </div>
                         <!-- good -->
                         <div class="modal-good">
                             <div class="modal-good-content">
                                 <div></div>
-                                <p>💛🧡💛</p>
-                                <span class="modal-close">X</span>
+                                <!-- <p>💛🧡💛</p> -->
+                                <span class="modal-close"><i class="fas fa-times"></i></span>
                             </div>
                         </div>
                         <!-- notBad -->
                         <div class="modal-notBad">
                             <div class="modal-notBad-content">
                                 <div></div>
-                                <p>💛🧡</p>
-                                <span class="modal-close">X</span>
+                                <!-- <p>💛🧡</p> -->
+                                <span class="modal-close"><i class="fas fa-times"></i></span>
                             </div>
                         </div>
                         <!-- nomal -->
                         <div class="modal-normal">
                             <div class="modal-normal-content">
                                 <div></div>
-                                <p>💛</p>
-                                <span class="modal-close">X</span>
+                                <!-- <p>💛</p> -->
+                                <span class="modal-close"><i class="fas fa-times"></i></span>
                             </div>
                         </div>
 
@@ -220,9 +235,9 @@
         </div>
         <div class="icon">
             <a href=""><i class="fas fa-phone-alt"></i></a>
-            <a href=""><i class="far fa-envelope"></i></a>
-            <a href=""><i class="fab fa-instagram"></i></a>
-            <a href=""><i class="fab fa-github-alt"></i></a>
+            <a href="" target="_blank"><i class="far fa-envelope"></i></a>
+            <a href="https://www.instagram.com/ryuwisdom/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/ryuwisdom" target="_blank"><i class="fab fa-github-alt"></i></a>
         </div>
     </div>
     <script src="./about.js"></script>
