--- a/1st_homework/index.html
+++ b/1st_homework/index.html
@@ -17,10 +17,10 @@
         <div class="bottom">
             <div class="list">
     
-                <li><a href="">About Me</a></li>
-                <li><a href="">Experience</a></li>
-                <li><a href="">Gallary</a></li>
-                <li><a href="">Plan</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="d-day.html">The day</a></li>
+
             </div>
         </div>
     </div>
