--- a/1st_homework/about.html
+++ b/1st_homework/about.html
@@ -75,8 +75,10 @@
                                 <div class="item  hvr-bounce-in">
                                     <p>Spicy Food & 떡볶이</p>
                                 </div>
-                                <div class="item  hvr-bounce-in">
+                                <div class="item  hvr-bounce-in" id="miffy">
                                     <p>Miffy</p>
+                                    <div class="miffy">
+                                    </div>
                                 </div>
                                 <div class="item  hvr-bounce-in">
                                     <p>Vegetable & fruit</p>
