--- a/1st_homework/gallery.html
+++ b/1st_homework/gallery.html
@@ -82,8 +82,8 @@
         <div class="icon">
             <a href=""><i class="fas fa-phone-alt"></i></a>
             <a href=""><i class="far fa-envelope"></i></a>
-            <a href=""><i class="fab fa-instagram"></i></a>
-            <a href=""><i class="fab fa-github-alt"></i></a>
+            <a href="https://www.instagram.com/ryuwisdom/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/ryuwisdom" target="_blank"><i class="fab fa-github-alt"></i></a>
         </div>
     </div>
     
