--- a/1st_homework/about.html
+++ b/1st_homework/about.html
@@ -15,7 +15,7 @@
         <div class="nav-bar">
             <div class="logo-background"></div>
             <div class="logo">
-                <a href=""><h1>ryuWisdom</h1></a>
+                <a href="about.html"><h1>ryuWisdom</h1></a>
             </div>
 
             <div class="menu">
@@ -42,7 +42,7 @@
                 <div class="profile-info">
                     <div class="intro-text">
                         <p>안녕하세요🧡<br>코딩공부로 하루하루가 고단하면서도 행복한 예비 프론트앤드 개발자 류지혜입니다🥰.<br></p>
-                        <!-- <p class="logo-text">ryuWisdom은 제가 향후 브랜딩 할 </p> -->
+                        
                     </div>
                 </div>
                 <div class="sub-info">
@@ -131,7 +131,7 @@
                             <div class="interest-content">
                                 <p>저는 환경(Environment)과 잘 사는 것(Well-Being)에 관심이 많습니다.</p>
                                 <p>언젠가 환경(Environment)과 잘 사는 것(Well-Being), 두가지 컨셉과 관련된 사업모델로</p>
-                                <p>미약하더라도 사회에 건강한 영향을 주는 작은 비즈니스를 시작하고 싶습니다.</p>
+                                <p>미약하더라도 사회에 건강한 영향을 주는 비즈니스를 시작하고 싶습니다.</p>
 
 
 
@@ -237,7 +237,7 @@
         </div>
         <div class="icon">
             <a href=""><i class="fas fa-phone-alt"></i></a>
-            <a href="" target="_blank"><i class="far fa-envelope"></i></a>
+            <a href="mailto:bonnie.jr54@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
             <a href="https://www.instagram.com/ryuwisdom/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://github.com/ryuwisdom" target="_blank"><i class="fab fa-github-alt"></i></a>
         </div>
