--- a/1st_homework/d-day.html
+++ b/1st_homework/d-day.html
@@ -18,7 +18,7 @@
         <div class="nav-bar">
             <div class="logo-background"></div>
             <div class="logo">
-                <h1>ryuWisdom</h1>
+                <a href="about.html"><h1>ryuWisdom</h1></a>
             </div>
 
             <div class="menu">
@@ -59,9 +59,9 @@
         </div>
         <div class="icon">
             <a href=""><i class="fas fa-phone-alt"></i></a>
-            <a href=""><i class="far fa-envelope"></i></a>
-            <a href=""><i class="fab fa-instagram"></i></a>
-            <a href=""><i class="fab fa-github-alt"></i></a>
+            <a href="mailto:bonnie.jr54@gmail.com"><i class="far fa-envelope"></i></a>
+            <a href="https://www.instagram.com/ryuwisdom/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/ryuwisdom" target="_blank"><i class="fab fa-github-alt"></i></a>
         </div>
     </div>
     
