modified_about-page_structure

--- a/1st_homework/gallery.html
+++ b/1st_homework/gallery.html
@@ -16,7 +16,7 @@
         <div class="nav-bar">
             <div class="logo-background"></div>
             <div class="logo">
-                <a href="about.html"><h1>ryuWisdom</h1></a>
+                <a href="index.html"><h1>ryuWisdom</h1></a>
             </div>
 
             <div class="menu">
