modified_button @about page

--- a/1st_homework/about.html
+++ b/1st_homework/about.html
@@ -34,6 +34,10 @@
         </div>
 
         <div class="main-container">
+<div class="scroll-up-btn" id="up-btn">
+    <i class="fas fa-arrow-up"></i>
+</div>
+
             <div class="profile">
                 <h1 class="about-subject">About Me</h1>
                 <div class="profile-img">
