--- a/1st_homework/about.html
+++ b/1st_homework/about.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
     <title>about</title>
     <link rel="stylesheet" href="./about.css">
     <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
@@ -141,7 +143,7 @@
                             <div class="interest-right-content-main">
                                 <div class="interest-letter-wrapper">
                                     <p>저는 환경(Environment)과 잘 사는 것(Well-Being)에 관심이 많습니다.</p>
-                                    <p>언젠가 환경(Environment)과 잘 사는 것(Well-Being), 두가지 컨셉과 관련된 사업모델로</p>
+                                    <p>언젠가 위 두가지 컨셉을 포함하는 사업모델로</p>
                                     <p>모두에게 건강한 영향을 주는 비즈니스를 시작하고 싶습니다.</p>
                                 </div>
                             </div>
@@ -269,7 +271,7 @@
             <a href="https://github.com/ryuwisdom" target="_blank"><i class="fab fa-github-alt"></i></a>
         </div>
     </div>
-    <script src="./about.js"></script>
+    <script src="./about.js?n=1"></script>
 
 </body>
 
