--- a/1st_homework/index.html
+++ b/1st_homework/index.html
@@ -25,6 +25,6 @@
             </div>
         </div>
     </div>
-<script src="./main.js"></script>
+<script src="./main.js?n=1"></script>
 </body>
 </html>
